--- a/ExVettori/Recupero_compito_Solution/Recupero_compito/Recupero_compito.csproj
+++ b/ExVettori/Recupero_compito_Solution/Recupero_compito/Recupero_compito.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9BF25DA3-ECD4-4422-AFED-44D67043EFC7}</ProjectGuid>
+    <ProjectGuid>{6DD20154-0267-40BD-8262-ABF46955C09F}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Verifica2</RootNamespace>
-    <AssemblyName>Verifica2</AssemblyName>
+    <RootNamespace>Recupero_compito</RootNamespace>
+    <AssemblyName>Recupero_compito</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
