--- a/Desktop/GestioneTabella_Solution/GestioneTabella/GestioneTabella.csproj
+++ b/Desktop/GestioneTabella_Solution/GestioneTabella/GestioneTabella.csproj
@@ -53,10 +53,19 @@
     <Compile Include="FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmAus.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmAus.Designer.cs">
+      <DependentUpon>FrmAus.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmAus.resx">
+      <DependentUpon>FrmAus.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
