--- a/Desktop/TabelleAutoriLibri_Solution/TabelleAutoriLibri/TabelleAutoriLibri.csproj
+++ b/Desktop/TabelleAutoriLibri_Solution/TabelleAutoriLibri/TabelleAutoriLibri.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2A919E68-438D-4F8A-B213-C89D558B55FB}</ProjectGuid>
+    <ProjectGuid>{8E33687B-3AD4-4A54-B57B-8E84516F431A}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>TabelleAutoriLibri</RootNamespace>
     <AssemblyName>TabelleAutoriLibri</AssemblyName>
@@ -46,16 +46,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FrmMain.cs">
+    <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmMain.Designer.cs">
-      <DependentUpon>FrmMain.cs</DependentUpon>
+    <Compile Include="frmMain.Designer.cs">
+      <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="FrmMain.resx">
-      <DependentUpon>FrmMain.cs</DependentUpon>
+    <EmbeddedResource Include="frmMain.resx">
+      <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
